--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>600</height>
+    <width>531</width>
+    <height>695</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -122,7 +122,7 @@
     <item>
      <widget class="QTabWidget" name="gameChoiceTabs">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_4">
        <attribute name="title">
@@ -132,7 +132,7 @@
         <item>
          <widget class="QTabWidget" name="awlTabWidget">
           <property name="currentIndex">
-           <number>2</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
@@ -198,7 +198,7 @@
             <item>
              <widget class="QCheckBox" name="quadSpearCheck">
               <property name="text">
-               <string>Quad Spear</string>
+               <string>Quad Hunting Spear</string>
               </property>
              </widget>
             </item>
@@ -256,7 +256,7 @@
         <item>
          <widget class="QTabWidget" name="lavabladeTabWidget">
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="tab_6">
            <attribute name="title">
@@ -434,8 +434,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>500</width>
-     <height>21</height>
+     <width>531</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
