--- a/ragatron/ragatron.qrc
+++ b/ragatron/ragatron.qrc
@@ -5,5 +5,9 @@
         <file>Ragatron_instructions.txt</file>
         <file>dannagle.png</file>
         <file>ragatron.css</file>
+        <file>cheats/lavablade.xml</file>
+        <file>cheats/wizardlizard.xml</file>
+        <file>dannagle_logo_fadewhite.png</file>
+        <file>Twitter_logo_blue.png</file>
     </qresource>
 </RCC>
