--- a/ragatron/ragatron.qrc
+++ b/ragatron/ragatron.qrc
@@ -9,5 +9,6 @@
         <file>cheats/wizardlizard.xml</file>
         <file>dannagle_logo_fadewhite.png</file>
         <file>Twitter_logo_blue.png</file>
+        <file>cheats/gamedevtycoon.xml</file>
     </qresource>
 </RCC>
