Dropping non-LDG support. Significant code refactoring.

--- a/ragatron/ragatron.qrc
+++ b/ragatron/ragatron.qrc
@@ -10,5 +10,6 @@
         <file>Twitter_logo_blue.png</file>
         <file>cheats/soulthief.xml</file>
         <file>cheats/indiegamesim.xml</file>
+        <file>GitHub-Mark-64px.png</file>
     </qresource>
 </RCC>
