--- a/ragatron/mainwindow.ui
+++ b/ragatron/mainwindow.ui
@@ -56,7 +56,7 @@
        <string notr="true">color:rgb(170, 0, 0);font-weight:bold;</string>
       </property>
       <property name="text">
-       <string>Ragatron is not affiliated nor supported by the creators of these games.</string>
+       <string>Ragatron is not affiliated nor supported by Lost Decade Games.</string>
       </property>
      </widget>
     </item>
@@ -68,7 +68,7 @@
      <x>0</x>
      <y>0</y>
      <width>641</width>
-     <height>31</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
