--- a/ragatron/ragatron.qrc
+++ b/ragatron/ragatron.qrc
@@ -11,5 +11,6 @@
         <file>cheats/soulthief.xml</file>
         <file>cheats/indiegamesim.xml</file>
         <file>GitHub-Mark-64px.png</file>
+        <file>ldg.jpg</file>
     </qresource>
 </RCC>
