updated README with new games

--- a/ragatron/ragatron.qrc
+++ b/ragatron/ragatron.qrc
@@ -12,5 +12,6 @@
         <file>cheats/indiegamesim.xml</file>
         <file>GitHub-Mark-64px.png</file>
         <file>ldg.jpg</file>
+        <file>patreon_logo.png</file>
     </qresource>
 </RCC>
