--- a/ragatron/cheatui.ui
+++ b/ragatron/cheatui.ui
@@ -31,7 +31,7 @@
      <item>
       <widget class="QLabel" name="pathLabel">
        <property name="text">
-        <string>Path</string>
+        <string>Steam Path</string>
        </property>
       </widget>
      </item>
